Add reset button to '<DrinkChoice/>', restyle button

--- a/11_react-basics/09_handling_events_exercise/my-first-app/src/components/ui/Button.css
+++ b/11_react-basics/09_handling_events_exercise/my-first-app/src/components/ui/Button.css
@@ -1,11 +1,14 @@
 .button {
+	box-sizing: border-box;
 	margin-right: 10px;
 }
 
-.button:hover,
+.button:hover {
+	border: 2px solid #6000bf	;
+}
 .button:focus,
 .button:active {
-	border: 2px solid #181b35;
-	background-color: #221c35;
+	border: 2px solid #6000bf	;
+	background-color: #3f195F;
 	color: #eeffff;
 }
