--- a/12_react-advanced/07_01_talking-to-an-api_fetching-data/src/index.css
+++ b/12_react-advanced/07_01_talking-to-an-api_fetching-data/src/index.css
@@ -27,3 +27,33 @@ body {
 h1 {
   font-size: 3.2em;
 }
+.App {
+  padding: 2rem 1rem;
+}
+
+.container {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: row;
+  > .userList {
+    padding-left: 1rem;
+    width: 40%;
+    list-style: none;
+    > .userListItem:hover {
+      font-weight: 800;
+      cursor: pointer;
+    }
+  }
+  > .userDetail {
+    width: 60%;
+    padding-left: 2rem;
+    border-left: 2px solid #a2a1a0;
+    > .userData {
+      padding-left: 1rem;
+
+      > .userDataType {
+        font-weight: 600;
+      }
+    }
+  }
+}
