--- a/12_react-advanced/07_03_talking-to-an-api_send-post-request/src/index.css
+++ b/12_react-advanced/07_03_talking-to-an-api_send-post-request/src/index.css
@@ -33,7 +33,10 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  margin-top: 0;
+  font-size: 3rem;
+  line-height: 3rem;
+  height: fit-content;
 }
 .App {
   padding: 2rem 1rem;
@@ -69,12 +72,14 @@ h1 {
     flex-direction: row;
     > .userList {
       width: 30%;
+      max-width: 300px;
       padding-left: 1rem;
+      border-right: 2px solid #a2a1a0;
       border-bottom: none;
     }
     > .userDetail {
-      padding-left: 2rem;
-      border-left: 2px solid #a2a1a0;
+      padding-left: 3rem;
+      /* border-left: 2px solid #a2a1a0; */
       width: 70%;
     }
   }
