refactor(styles): make styles more responsive

--- a/12_react-advanced/07_03_talking-to-an-api_send-post-request/src/index.css
+++ b/12_react-advanced/07_03_talking-to-an-api_send-post-request/src/index.css
@@ -15,14 +15,6 @@
   -webkit-text-size-adjust: 100%;
 }
 
-ul {
-  list-style: none;
-}
-
-hr {
-  border: 1px solid #494748;
-}
-
 body {
   margin: 0;
   padding: 20px;
@@ -32,55 +24,106 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  margin-top: 0;
-  font-size: 3rem;
-  line-height: 3rem;
-  height: fit-content;
+ul {
+  list-style: none;
+  margin-bottom: 0;
 }
+
+hr {
+  border: 1px solid #494748;
+}
+
 .App {
   padding: 2rem 1rem;
   align-self: stretch;
-}
 
-.container {
-  margin-top: 2rem;
-  display: flex;
-  flex-direction: column;
-  > .userList {
-    padding: 0 0 2rem 1rem;
-    border-bottom: 2px solid #a2a1a0;
-    > .userListItem:hover {
-      font-weight: 800;
-      cursor: pointer;
-    }
+  > .title {
+    margin-top: 0;
+    font-size: 3rem;
+    line-height: 3rem;
+    height: fit-content;
+    text-align: center;
   }
-  > .userDetail {
-    padding-left: 1rem;
-    > .userData {
-      padding-left: 1rem;
+  > .exrDesc {
+    text-align: center;
+  }
 
-      > .userDataType {
-        font-weight: 600;
+  > .content {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    > .usersPane {
+      max-width: 375px;
+      min-width: 320px;
+      display: flex;
+      flex-direction: column;
+      padding: 0 1rem 2rem 0;
+      > .userList {
+        padding: 0 0 2rem 1rem;
+        border-bottom: 1px solid #494748;
+        > .userListItem:hover {
+          font-weight: 800;
+          cursor: pointer;
+        }
+      }
+      > .userForm {
+        padding: 1rem 0;
+        display: flex;
+        flex-direction: column;
+        row-gap: 1rem;
+        > button {
+          width: 50%;
+          align-self: flex-end;
+          margin-top: 1rem;
+          height: 2rem;
+          font-size: 1rem;
+        }
+      }
+    }
+    > .userDetail {
+      padding: 1rem 0 0 1rem;
+      border-top: 2px solid #a2a1a0;
+      > .userData {
+        padding-left: 1rem;
+
+        > .userDataType {
+          font-weight: 600;
+        }
       }
     }
   }
 }
 
 @media (min-width: 768px) {
-  .container {
-    flex-direction: row;
-    > .userList {
-      width: 30%;
-      max-width: 300px;
-      padding-left: 1rem;
-      border-right: 2px solid #a2a1a0;
-      border-bottom: none;
+  .App {
+    > .title {
+      text-align: left;
     }
-    > .userDetail {
-      padding-left: 3rem;
-      /* border-left: 2px solid #a2a1a0; */
-      width: 70%;
+    > .exrDesc {
+      text-align: left;
+    }
+    > .content {
+      flex-direction: row;
+      align-items: flex-start;
+      > .usersPane {
+        border-bottom: none;
+        > .userList {
+          padding-left: 1rem;
+        }
+        > .userForm {
+          padding: 1rem 1rem 1rem 0;
+        }
+      }
+      > .userDetail {
+        padding-left: 3rem;
+        border-top: none;
+        border-left: 2px solid #a2a1a0;
+        width: 70%;
+        > h2 {
+          margin-top: 0;
+        }
+      }
     }
   }
 }
