--- a/12_react-advanced/07_04_talking-to-an-api_loading-and-error-state/src/index.css
+++ b/12_react-advanced/07_04_talking-to-an-api_loading-and-error-state/src/index.css
@@ -14,7 +14,9 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
+* {
+  margin: 0;
+}
 body {
   margin: 0;
   padding: 20px;
@@ -45,11 +47,12 @@ hr {
     text-align: center;
   }
   > .exrDesc {
+    padding: 1rem;
     text-align: center;
   }
 
   > .content {
-    margin-top: 2rem;
+    padding-top: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -58,7 +61,7 @@ hr {
       min-width: 320px;
       display: flex;
       flex-direction: column;
-      padding: 0 1rem 2rem 0;
+      padding: 0 1rem 2rem;
       > .userList {
         padding: 0 0 2rem 1rem;
         border-bottom: 1px solid #494748;
@@ -68,7 +71,7 @@ hr {
         }
       }
       > .userForm {
-        padding: 1rem 0;
+        padding: 1rem;
         display: flex;
         flex-direction: column;
         row-gap: 1rem;
@@ -82,15 +85,43 @@ hr {
       }
     }
     > .userDetail {
-      padding: 1rem 0 0 1rem;
+      padding: 0 0 1rem;
       width: 100%;
       min-height: 75vh;
       border-top: 2px solid #a2a1a0;
+      > .userName {
+        padding: 2rem 0 1rem 0;
+        font-size: 1.75rem;
+      }
       > .userData {
-        padding-left: 1rem;
+        padding: 0 0 0.5rem 0.5rem;
 
         > .userDataType {
           font-weight: 600;
+        }
+      }
+      > .userData:last-of-type {
+        padding-bottom: 1rem;
+      }
+      > .postsSectionTitle {
+        padding: 1rem 0 0.5rem 0;
+        font-size: 1.5rem;
+      }
+      > .posts {
+        padding: 0;
+        /* border: 1px solid red; */
+        > .postContainer {
+          > .post {
+            padding-left: 0.5rem;
+            > .postTitle {
+              padding: 0.5rem 0 0.25rem 0;
+              text-transform: capitalize;
+              /* border: 1px solid pink; */
+            }
+            > .postBody {
+              padding: 0 0 0.5rem 0;
+            }
+          }
         }
       }
     }
@@ -104,6 +135,7 @@ hr {
     }
     > .exrDesc {
       text-align: left;
+      padding-left: 0;
     }
     > .content {
       flex-direction: row;
@@ -118,12 +150,13 @@ hr {
         }
       }
       > .userDetail {
-        padding-left: 3rem;
+        padding: 0 0 0 3rem;
         border-top: none;
         border-left: 2px solid #a2a1a0;
         width: 70%;
-        > h2 {
-          margin-top: 0;
+        > .userName {
+          padding: 0 0 1rem 0;
+          font-size: 1.75rem;
         }
       }
     }
